Update branding and contacts layout

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI Image Generator - Create Amazing Images with AI</title>
     <meta name="description" content="AI-powered image generation and virtual try-on. Create stunning images and try on clothes virtually." />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-pVUqQv4TxS3VdXG9e5lZndKyVKoU9pYNCXS6/4FwXk4Hknc0aF4Pjk6IZdxHDBPPfQtbDNRsE6z3eM4v3gsx0w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
     <!-- Google Identity Services (for Google Sign-In) -->
     <script src="https://accounts.google.com/gsi/client" async defer></script>
