Handle YooKassa refunds and update meta tags

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Image Generator - Create Amazing Images with AI</title>
-    <meta name="description" content="AI-powered image generation and virtual try-on. Create stunning images and try on clothes virtually." />
+    <title>AI Generator - Создавайте удивительные изображения с помощью ИИ</title>
+    <meta name="description" content="Редактирование, генерация изображений, виртуальная примерка одежды, аксессуаров с помощью ИИ." />
 
     <!-- Google Identity Services (for Google Sign-In) -->
     <script src="https://accounts.google.com/gsi/client" async defer></script>
