Update pricing and rebrand to AI Generator

--- a/AI Generator Landing.html
+++ b/AI Generator Landing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Media Generator - Виртуальная примерка</title>
+    <title>AI Generator - Виртуальная примерка</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -103,7 +103,7 @@
                     <div class="w-9 h-9 gradient-orange rounded-xl flex items-center justify-center shadow-md">
                         <i class="fas fa-magic text-white text-sm"></i>
                     </div>
-                    <span class="font-bold text-xl text-slate-800 tracking-tight">AI Media Generator</span>
+                    <span class="font-bold text-xl text-slate-800 tracking-tight">AI Generator</span>
                 </div>
 
                 <!-- Nav -->
@@ -186,7 +186,7 @@
                                     <p class="text-white/90 font-medium">Примерьте одежду и аксессуары на своё фото</p>
                                 </div>
                                 <div class="p-6 sm:p-8 flex flex-col gap-3">
-                                    <p class="text-slate-600">Загрузите своё фото и фото одежды, и наш AI создаст реалистичную примерку</p>
+                                    <p class="text-slate-600">Загрузите своё фото и фото одежды — AI покажет посадку и образ, но финальный результат может отличаться от оригинала</p>
                                     <div class="inline-flex items-center gap-2 px-4 py-2 rounded-full bg-slate-100 text-slate-700 text-sm font-semibold self-start">
                                         <i class="fas fa-coins text-brand-purple"></i>
                                         <span>2 кредита за примерку</span>
@@ -378,7 +378,7 @@
                         <span class="text-xs font-bold text-slate-400 uppercase tracking-wider bg-slate-100 px-3 py-1 rounded-full">Basic</span>
                     </div>
                     <div class="flex items-baseline mb-6">
-                        <span class="text-4xl font-extrabold text-slate-900">299 ₽</span>
+                        <span class="text-4xl font-extrabold text-slate-900">369 ₽</span>
                         <span class="text-slate-400 ml-2 font-medium">/ месяц</span>
                     </div>
                     <div class="mb-8 p-4 bg-slate-50 rounded-2xl">
@@ -398,7 +398,7 @@
                         <span class="text-xs font-bold text-brand-blue uppercase tracking-wider bg-blue-50 px-3 py-1 rounded-full">Standard</span>
                     </div>
                     <div class="flex items-baseline mb-6">
-                        <span class="text-5xl font-extrabold text-slate-900">499 ₽</span>
+                        <span class="text-5xl font-extrabold text-slate-900">599 ₽</span>
                         <span class="text-slate-400 ml-2 font-medium">/ месяц</span>
                     </div>
                     <div class="mb-8 p-4 bg-blue-50 rounded-2xl border border-blue-100">
@@ -417,7 +417,7 @@
                         <span class="text-xs font-bold text-slate-400 uppercase tracking-wider bg-slate-100 px-3 py-1 rounded-full">Premium</span>
                     </div>
                     <div class="flex items-baseline mb-6">
-                        <span class="text-4xl font-extrabold text-slate-900">899 ₽</span>
+                        <span class="text-4xl font-extrabold text-slate-900">1099 ₽</span>
                         <span class="text-slate-400 ml-2 font-medium">/ месяц</span>
                     </div>
                     <div class="mb-8 p-4 bg-slate-50 rounded-2xl">
@@ -506,7 +506,7 @@
                     </div>
                     <h2 class="text-3xl md:text-5xl font-extrabold mb-8 text-slate-900 leading-tight">Умный AI-ассистент для идеальных результатов</h2>
                     <p class="text-slate-500 text-lg mb-8 leading-relaxed">
-                        Ассистент помогает формировать точные промпты, улучшать качество генераций и получать более реалистичные изображения.
+                        Ассистент помогает формировать точные промпты, улучшать качество генераций и получать более аккуратные визуализации.
                     </p>
                     <div class="bg-white shadow-soft rounded-xl p-6 inline-flex flex-col border border-slate-100">
                         <span class="text-slate-400 text-xs font-bold uppercase tracking-wider mb-2">Стоимость использования</span>
@@ -742,7 +742,7 @@
                         <div class="w-8 h-8 gradient-orange rounded-lg flex items-center justify-center shadow-sm">
                             <i class="fas fa-magic text-white text-xs"></i>
                         </div>
-                        <span class="font-bold text-lg text-slate-800">AI Media Generator</span>
+                        <span class="font-bold text-lg text-slate-800">AI Generator</span>
                     </div>
                     <p class="text-slate-500 text-sm">Виртуальная примерка и AI-редактирование изображений.</p>
                 </div>
@@ -770,7 +770,7 @@
             </div>
             
             <div class="border-t border-slate-100 pt-8 text-center text-xs text-slate-400">
-                &copy; 2024 AI Media Generator. Все права защищены.
+                &copy; 2024 AI Generator. Все права защищены.
             </div>
         </div>
     </footer>
