feat: stars rename, webp uploads, password reset

--- a/AI Generator Landing.html
+++ b/AI Generator Landing.html
@@ -449,7 +449,7 @@
                     <p class="text-slate-500">Для максимальной гибкости. Работают без подписки.</p>
                 </div>
                 <div class="text-sm text-slate-500 text-right bg-white px-4 py-2 rounded-lg border border-slate-200 shadow-sm">
-                    Кредиты используются для генераций без подписки<br>и для AI-ассистента.
+                    ⭐️Звезды используются для генераций без подписки<br>и для AI-ассистента.
                 </div>
             </div>
 
@@ -695,7 +695,7 @@
                             <i class="far fa-question-circle text-brand-blue"></i>
                             Что такое кредиты?
                         </h4>
-                        <p class="text-slate-500 pl-8">Кредиты — это внутренняя валюта для генераций и AI-ассистента.</p>
+                        <p class="text-slate-500 pl-8">⭐️Звезды — это внутренняя валюта для генераций и AI-ассистента.</p>
                     </div>
                 </div>
                 <!-- Item -->
